# Agent_Mcqueen

./: .gitattributes  .gitignore  Dockerfile_misys_forza_full.desktop  README.md  dkrun.sh
docs/: ARCHITECTURE.md  SETUP.md  TRAINING.md
ros2_workspace/: ARCHITECTURE.md  README.md
ros2_workspace/maps/: map0.pgm  map0.yaml  map0_obs.yaml  map1.pgm  map1.yaml  map10.pgm  map10.yaml  map100.pgm  map100.yaml  map101.pgm  map101.yaml  map102.pgm  map102.yaml  map103.pgm  map103.yaml  map104.pgm  map104.yaml  map105.pgm  map105.yaml  map106.pgm  map106.yaml  map107.pgm  map107.yaml  map108.pgm  map108.yaml  map109.pgm  map109.yaml  map11.pgm  map11.yaml  map110.pgm  map110.yaml  map111.pgm  map111.yaml  map112.pgm  map112.yaml  (+871 more)
ros2_workspace/src/agent_mcqueen/: package.xml  setup.cfg  setup.py
ros2_workspace/src/agent_mcqueen/agent_mcqueen/: __init__.py  overtake_agent_node.py  stage1_agent_node.py
ros2_workspace/src/agent_mcqueen/config/: forza_overtake_config.yaml  forza_stage1_config.yaml  overtake_config.yaml  sim_overtake.yaml  sim_stage1.yaml  stage1_config.yaml
ros2_workspace/src/agent_mcqueen/launch/: forza_overtake_launch.py  forza_stage1_launch.py  overtake_agent_launch.py  sim_overtake_launch.py  sim_stage1_launch.py  stage1_agent_launch.py
ros2_workspace/src/agent_mcqueen/models/: overtake_final.pth
ros2_workspace/src/agent_mcqueen/models/stage1/f1tenth_ppo_stage1_v1_20251110_133811/: f1tenth_ppo_stage1_v1_20251110_133811_vecnormalize_10000000_steps.pkl
ros2_workspace/src/agent_mcqueen/scripts/: extract_vecnorm_stats.py
training/: README.md
(+1362 files in other folders)
